--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,7 +1,19 @@
 .container {
   padding: 0 2rem;
 }
-
+.search {
+  background-color: rgb(239, 237, 237);
+  color: #111;
+  background-position: 10px 10px;
+  background-repeat: no-repeat;
+  padding-left: 40px;
+  width: 500px;
+  padding: 10px;
+  margin: 30px 30px;
+  border-radius: 10px;
+  outline: none;
+  border: 1px solid #ccc;
+}
 .main {
   min-height: 100vh;
   padding: 4rem 0;
@@ -43,6 +55,7 @@
   margin: 0;
   line-height: 1.15;
   font-size: 4rem;
+  color: azure;
 }
 
 .title,
@@ -55,7 +68,19 @@
   line-height: 1.5;
   font-size: 1.5rem;
 }
-
+.button {
+  background-color: #1b241c;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 10px;
+}
 .code {
   background: #fafafa;
   border-radius: 5px;
@@ -77,12 +102,15 @@
   margin: 1rem;
   padding: 1.5rem;
   text-align: left;
-  color: inherit;
+  color: white;
   text-decoration: none;
   border: 1px solid #eaeaea;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
   max-width: 300px;
+  flex: 1 0 21%; /* explanation below */
+  margin: 5px;
+  /* height: 100px; */
 }
 
 .card:hover,
